fix: initialize emit list in EthStatsRequest to avoid null pointer exceptions
Signed-off-by: mykim <kimminyong2034@gmail.com>